fix(front): remove the no wrap to email summary to allow the text to be in more than one line in some language

--- a/frontend/src/component/Dashboard/UserStatus.styl
+++ b/frontend/src/component/Dashboard/UserStatus.styl
@@ -11,7 +11,6 @@
       width 45%
       margin-right 2%
       text-align right
-      text-wrap nowrap
     &__value
       display flex
       align-items center
